--- a/District Coffee/www/menu.html
+++ b/District Coffee/www/menu.html
@@ -98,7 +98,7 @@ $(document).ready(function()
                     <div class="page-content">
                         <div class="content-block" style="">
 
-<h3 class="widget-title">Menu</h3>
+<div style="text-align: center;"><h3 class="widget-title">Menu</h3></div>
 
 <div>
 
