--- a/District Coffee/www/findus.html
+++ b/District Coffee/www/findus.html
@@ -21,6 +21,7 @@
     <meta name="msapplication-tap-highlight" content="no">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<script src="http://maps.google.com/maps/api/js" type="text/javascript"></script>
 
     <!-- Your app title -->
     <title>District Coffee</title>
