--- a/District Coffee/platforms/browser/www/index.html
+++ b/District Coffee/platforms/browser/www/index.html
@@ -104,7 +104,7 @@ $(document).ready(function()
 <a href="menu.html"><img src="img/food.jpg" style="width: 100%; max-width: 800px;"></a>
 
 
-<a href="clickandcollect.html"><img src="img/food2.jpg" style="width: 100%;  max-width: 800px;"></a>
+<a href="http://www.districtcoffee.co.uk/click-collect/" target="_blank"><img src="img/food2.jpg" style="width: 100%;  max-width: 800px;"></a>
 
 
 <a href="findus.html"><img src="img/outside.jpg" style="width: 100%;  max-width: 800px;"></a>
