--- a/District Coffee/platforms/browser/www/menu.html
+++ b/District Coffee/platforms/browser/www/menu.html
@@ -98,7 +98,7 @@ $(document).ready(function()
                     <div class="page-content">
                         <div class="content-block" style="">
 
-<h3 class="widget-title">Menu</h3>
+<div style="text-align: center;"><h3 class="widget-title">Menu</h3></div>
 
 <div>
 
@@ -142,7 +142,7 @@ $(document).ready(function()
 
 
 <div class="siteorigin-widget-tinymce textwidget">
-<h3>Lunch</h3>
+<h3 class="widget-title">Lunch</h3>
     <p><i>add 2 salads to any of the following for £2</i></p>
 <table style="text-align: left;">
 <tbody>
@@ -178,7 +178,7 @@ $(document).ready(function()
 
 
 <div class="siteorigin-widget-tinymce textwidget">
-<h3>Sandwiches</h3>
+<h3 class="widget-title">Sandwiches</h3>
     <p><i>served with small scoop of salad<br>
  add 2 large scoops of salads to any of the following £2<br>
  add a cup of soup £2<br>
@@ -217,7 +217,7 @@ $(document).ready(function()
 
 
 <div class="siteorigin-widget-tinymce textwidget">
-<h3>Salads</h3>
+<h3 class="widget-title">Salads</h3>
     <p><i>choose 3 or per scoop</i></p>
 <table>
 <tbody>
@@ -250,7 +250,7 @@ $(document).ready(function()
 
 
 <div class="siteorigin-widget-tinymce textwidget">
-<h3>Espresso</h3>
+<h3 class="widget-title">Espresso</h3>
     <table>
 <tbody><tr>
 <td>Espresso</td>
@@ -298,7 +298,7 @@ $(document).ready(function()
 
 
 <div class="siteorigin-widget-tinymce textwidget">
-<h3>Suki Tea</h3>
+<h3 class="widget-title">Suki Tea</h3>
     <table>
 <tbody><tr>
 <td>Belfast Brew</td>
@@ -347,7 +347,7 @@ $(document).ready(function()
 
 
 <div class="siteorigin-widget-tinymce textwidget">
-<h3>Hot Drinks</h3>
+<h3 class="widget-title">Hot Drinks</h3>
     <table>
 <tbody><tr>
 <td>Matcha Latte</td>
@@ -370,7 +370,7 @@ $(document).ready(function()
 
 
 <div class="siteorigin-widget-tinymce textwidget">
-<h3>Cold Drinks</h3>
+<h3 class="widget-title">Cold Drinks</h3>
     <table>
 <tbody><tr>
 <td>Still Water</td>
@@ -406,18 +406,18 @@ $(document).ready(function()
 
 <div class="so-widget-sow-editor so-widget-sow-editor-base">
 <div class="siteorigin-widget-tinymce textwidget">
-    <h3 style="margin-bottom: 0px;">bailies coffee roasters</h3>
+    <h3 class="widget-title" style="margin-bottom: 0px;">bailies coffee roasters</h3>
 <p><i>espresso beans</i><br>
 Bailies Coffee is a close-knit team of dedicated people passionate about creating world class coffee experiences and having a lot of fun along the way. They are proud to source coffee from some of the world’s best producers, and build ethical, sustainable long term relationships with coffee farming communities committed to quality coffee production. They take meticulous care, pride and attention to detail at every stage of the coffee journey from tasting, sourcing and roasting. Our Colombian, single origin espresso is available to buy from our retail shelves.</p>
-<h3 style="margin-bottom: 0px;">broighter gold rapeseed oil</h3>
+<h3 class="widget-title" style="margin-bottom: 0px;">broighter gold rapeseed oil</h3>
 <p><i>salad dressings</i></p>
 <p>The Kane Family has been farming in Myroe for well over 100 years.&nbsp; Richard (sixth generation farmer) now works the land here at Broglasco Farm, Limavady with the latest machinery whilst still using traditional methods &amp; modern techniques. Rapeseed oil is naturally high in omega 3, 6 &amp; 9 and is used in most of our dishes in place of olive oil. We also sell regular cold pressed and flavour oils on our retail shelves. suki tea</p>
-<h3 style="margin-bottom: 0px;">loose leaf teas</h3>
+<h3 class="widget-title" style="margin-bottom: 0px;">loose leaf teas</h3>
 <p>Suki ethically source and blend their loose leaf teas, herbal infusions and fruit blends from all over the world. We stock a range of prepackaged loose leaf teas for you to take home &amp; brew.</p>
-<h3 style="margin-bottom: 0px;">Just Live a little</h3>
+<h3 class="widget-title" style="margin-bottom: 0px;">Just Live a little</h3>
 <p><i>granola</i></p>
 <p>Jill &amp; David started making granola from their Strangford Lough farmhouse in 2011 as something to serve with their yoghurt, which was a little tart. The business has grown from strength to strength since. We serve their gluten free triple nut granola on our brunch menu and retail packs to take home.</p>
-<h3 style="margin-bottom: 0px;">Michel’s</h3>
+<h3 class="widget-title" style="margin-bottom: 0px;">Michel’s</h3>
 <p><i>fruit &amp; veg</i></p>
 <p>Michel’s is an Ormeau Road institution. Michel can be found in the store (number 435) most morning after visiting the local farmers markets to pick up the freshest of produce. We work closely with him to ensure we offer the best of locally sourced, seasonal fruit &amp; veg.</p>
 </div>
