--- a/District Coffee/platforms/browser/www/findus.html
+++ b/District Coffee/platforms/browser/www/findus.html
@@ -21,6 +21,9 @@
     <meta name="msapplication-tap-highlight" content="no">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<script src="http://maps.google.com/maps/api/js" type="text/javascript"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBG_2iCTHElRQV3Q-pwv8znJXf52QddJRU&sensor=true"></script>
+
 
     <!-- Your app title -->
     <title>District Coffee</title>
@@ -41,6 +44,17 @@
     <script type="text/javascript">
 $(document).ready(function()
  {
+
+function initializeMap() {
+    var mapOptions = {
+        center: new google.maps.LatLng(43.069452, -89.411373),
+        zoom: 11,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+    var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+}
+
+
    
    var url="http://www.districtcoffee.co.uk/?json=get_recent_posts";
    $.getJSON(url,function(result){
