--- a/District Coffee/www/findus.html
+++ b/District Coffee/www/findus.html
@@ -116,6 +116,8 @@ function initializeMap() {
 
 <h3 class="widget-title">Find Us</h3>
 
+<div id="map"></div>
+
 <div class="col-xs-6 col-sm-6 col-md-6 address">
 <p>300 Ormeau Road<br>
 Belfast<br>
