--- a/District Coffee/www/findus.html
+++ b/District Coffee/www/findus.html
@@ -21,8 +21,8 @@
     <meta name="msapplication-tap-highlight" content="no">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-<script src="http://maps.google.com/maps/api/js" type="text/javascript"></script>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBG_2iCTHElRQV3Q-pwv8znJXf52QddJRU&sensor=true"></script>
+<!-- <script src="http://maps.google.com/maps/api/js" type="text/javascript"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBG_2iCTHElRQV3Q-pwv8znJXf52QddJRU&sensor=true"></script> -->
 
 
     <!-- Your app title -->
@@ -45,14 +45,62 @@
 $(document).ready(function()
  {
 
-function initializeMap() {
-    var mapOptions = {
-        center: new google.maps.LatLng(43.069452, -89.411373),
-        zoom: 11,
-        mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
-    var map = new google.maps.Map(document.getElementById("map"), mapOptions);
-}
+var app = {
+    // Application Constructor
+    initialize: function() {
+        this.bindEvents();
+    },
+    // Bind Event Listeners
+    //
+    // Bind any events that are required on startup. Common events are:
+    // 'load', 'deviceready', 'offline', and 'online'.
+    bindEvents: function() {
+        document.addEventListener('deviceready', this.onDeviceReady, false);
+    },
+    // deviceready Event Handler
+    //
+    // The scope of 'this' is the event. In order to call the 'receivedEvent'
+    // function, we must explicitly call 'app.receivedEvent(...);'
+    onDeviceReady: function() {
+       // app.receivedEvent('deviceready');
+       navigator.geolocation.getCurrentPosition(app.onSuccess, app.onError);
+    },
+
+    onSuccess: function(position){
+        var longitude = position.coords.longitude;
+        var latitude = position.coords.latitude;
+        var latLong = new google.maps.LatLng(latitude, longitude);
+
+        var mapOptions = {
+            center: latLong,
+            zoom: 13,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+
+        var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+    
+        var marker = new google.maps.Marker({
+              position: latLong,
+              map: map,
+              title: 'my location'
+          });
+    },
+    
+    onError: function(error){
+        alert("the code is " + error.code + ". \n" + "message: " + error.message);
+    },
+};
+
+app.initialize();
+
+// function initializeMap() {
+//     var mapOptions = {
+//         center: new google.maps.LatLng(43.069452, -89.411373),
+//         zoom: 11,
+//         mapTypeId: google.maps.MapTypeId.ROADMAP
+//     };
+//     var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+// }
 
 
    
@@ -163,6 +211,8 @@ BT7 2GE<br>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="lib/framework7/js/framework7.min.js"></script>
     <script type="text/javascript" src="js/my-app.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBG_2iCTHElRQV3Q-pwv8znJXf52QddJRU"> </script>
 
 </body>
 
